--- a/src/App.scss
+++ b/src/App.scss
@@ -1,95 +1,110 @@
-// .container {
-//     max-width: 1320px;
-//     margin: 0 auto;
-//     width: 100%;
-//   }
-  
-//   .api-chart {
-//     display: flex;
-//     flex-direction: column;
-//     gap: 1rem;
-  
-//     .api-node {
-//       padding: 1rem;
-//       border: 1px solid #ccc;
-//       border-radius: 8px;
-//       background-color: #f9f9f9;
-//       font-weight: bold;
-//     }
-  
-//     .api-branch {
-//       display: flex;
-//       flex-direction: column;
-//       margin-top: 1rem;
-//       gap: 1rem;
-//     }
-  
-//     .node {
-//       padding-left: 1rem;
-//       border-left: 3px solid #007bff;
-//       position: relative;
-//       display: flex;
-//       flex-direction: column;
-//       gap: 0.5rem;
-//     }
-  
-//     .leaf {
-//       padding-left: 2rem;
-//       font-weight: normal;
-//       color: #333;
-//       position: relative;
-//     }
-  
-//     @media (max-width: 768px) {
-//       flex-direction: row;
-//       flex-wrap: wrap;
-  
-//       .api-branch {
-//         flex-direction: row;
-//         flex-wrap: wrap;
-//         gap: 1rem;
-//       }
-  
-//       .node {
-//         min-width: 200px;
-//       }
-//     }
-//   }
-  
-
-
 * {
     margin: 0;
     padding: 0;
     box-sizing: border-box;
     font-family: Arial, Helvetica, sans-serif;
     background-color: antiquewhite;
-}
-
-
-.api-heading h1 {
+  }
+  
+  .container {
+    max-width: 1320px;
+    margin: 0 auto;
+    width: 100%;
+  }
+  
+  .api-heading {
     text-align: center;
     margin-top: 30px;
-
-    .api {
+  
+    h1 {
+      line-height: 1.3;
+  
+      .api {
         color: red;
-    }
-
-    .cases {
+      }
+  
+      .cases {
         color: blue;
+      }
     }
-
-}
-
-.api-box-div {
-  display: flex;
-  justify-content: center;
-
-  .api-box {
-      border: 3px solid brown;
-      padding: 15px;
-      margin-top: 20px;
   }
-
-}
-
+  
+  .api-box-div {
+    display: flex;
+    justify-content: center;
+  
+    .api-box {
+      border: 3px solid brown;
+      padding: 15px 30px;
+      margin-top: 20px;
+      cursor: default;
+    }
+  }
+  
+  .line-div {
+    display: flex;
+    justify-content: center;
+  
+    .line {
+      border-left: 2px solid brown;
+      height: 70px;
+    }
+  }
+  
+  .internal {
+    text-align: center;
+  
+    h3 {
+      font-weight: bold;
+    }
+  
+    .line-div {
+      .line {
+        border-left: 2px solid brown;
+        height: 40px;
+      }
+    }
+  }
+  
+  .text-center {
+    text-align: center;
+    margin-top: 20px;
+  }
+  
+  .horizontal-line-center {
+    display: flex;
+    justify-content: center;
+  
+    .horizontal-line {
+      width: 600px;
+      height: 0;
+      border-top: 2px solid brown;
+    }
+  }
+  
+  .two-vertical-lines {
+    display: flex;
+    justify-content: space-between;
+    width: 600px;
+    margin: -42px auto 0;
+  
+    div {
+      border-left: 2px solid brown;
+      height: 60px;
+      width: 2px;
+    }
+  }
+  
+  .side-labels {
+    display: flex;
+    justify-content: space-between;
+    width: 670px;
+    margin: 10px auto 0;
+    text-align: center;
+  
+    h3 {
+      font-weight: bold;
+      width: 100px;
+    }
+  }
+  
