--- a/src/App.scss
+++ b/src/App.scss
@@ -1,110 +1,117 @@
 * {
-    margin: 0;
-    padding: 0;
-    box-sizing: border-box;
-    font-family: Arial, Helvetica, sans-serif;
-    background-color: antiquewhite;
-  }
-  
-  .container {
-    max-width: 1320px;
-    margin: 0 auto;
-    width: 100%;
-  }
-  
-  .api-heading {
-    text-align: center;
-    margin-top: 30px;
-  
-    h1 {
-      line-height: 1.3;
-  
-      .api {
-        color: red;
-      }
-  
-      .cases {
-        color: blue;
-      }
+  margin: 0;
+  padding: 0;
+  box-sizing: border-box;
+  font-family: Arial, Helvetica, sans-serif;
+  background-color: antiquewhite;
+}
+
+.container {
+  max-width: 1320px;
+  margin: 0  auto;
+  width: 100%;
+  min-height: 80vh;
+}
+
+.api-heading {
+  text-align: center;
+  margin-top: 30px;
+
+  h1 {
+    line-height: 1.3;
+
+    .api {
+      color: red;
+    }
+
+    .cases {
+      color: blue;
     }
   }
-  
-  .api-box-div {
-    display: flex;
-    justify-content: center;
-  
-    .api-box {
-      border: 3px solid brown;
-      padding: 15px 30px;
-      margin-top: 20px;
-      cursor: default;
-    }
+}
+
+.api-box-div {
+  display: flex;
+  justify-content: center;
+
+  .api-box {
+    border: 3px solid brown;
+    padding: 15px 30px;
+    margin-top: 20px;
+    cursor: default;
   }
-  
+}
+
+.line-div {
+  display: flex;
+  justify-content: center;
+
+  .line {
+    border-left: 2px solid brown;
+    height: 70px;
+  }
+}
+
+.internal {
+  text-align: center;
+
+  h3 {
+    font-weight: bold;
+  }
+
   .line-div {
-    display: flex;
-    justify-content: center;
-  
     .line {
       border-left: 2px solid brown;
-      height: 70px;
+      height: 40px;
     }
   }
-  
-  .internal {
-    text-align: center;
-  
-    h3 {
-      font-weight: bold;
-    }
-  
-    .line-div {
-      .line {
-        border-left: 2px solid brown;
-        height: 40px;
-      }
-    }
-  }
-  
-  .text-center {
-    text-align: center;
-    margin-top: 20px;
-  }
-  
-  .horizontal-line-center {
-    display: flex;
-    justify-content: center;
-  
-    .horizontal-line {
-      width: 600px;
-      height: 0;
-      border-top: 2px solid brown;
-    }
-  }
-  
-  .two-vertical-lines {
-    display: flex;
-    justify-content: space-between;
+}
+
+.text-center {
+  text-align: center;
+  margin-top: 20px;
+}
+
+.horizontal-line-center {
+  display: flex;
+  justify-content: center;
+
+  .horizontal-line {
     width: 600px;
-    margin: -42px auto 0;
-  
-    div {
-      border-left: 2px solid brown;
-      height: 60px;
-      width: 2px;
-    }
+    height: 0;
+    border-top: 2px solid brown;
   }
-  
-  .side-labels {
-    display: flex;
-    justify-content: space-between;
-    width: 670px;
-    margin: 10px auto 0;
-    text-align: center;
-  
-    h3 {
-      font-weight: bold;
-      width: 100px;
+}
+
+.two-vertical-lines {
+  display: flex;
+  justify-content: space-between;
+  width: 600px;
+  margin: -42px auto 0;
+
+  div {
+    border-left: 2px solid brown;
+    height: 60px;
+    width: 2px;
+  }
+}
+
+.side-labels {
+  display: flex;
+  justify-content: space-between;
+  width: 670px;
+  margin: 10px auto 0;
+  text-align: center;
+
+  h3 {
+    font-weight: bold;
+    width: 100px;
+  }
+}
+@media (max-width: 800px) {
+    .container {
+      transform: rotate(270deg);
+     
     }
   }
   
