--- a/src/App.scss
+++ b/src/App.scss
@@ -1,117 +1,201 @@
 * {
-  margin: 0;
-  padding: 0;
-  box-sizing: border-box;
-  font-family: Arial, Helvetica, sans-serif;
-  background-color: antiquewhite;
-}
-
-.container {
-  max-width: 1320px;
-  margin: 0  auto;
-  width: 100%;
-  min-height: 80vh;
-}
-
-.api-heading {
-  text-align: center;
-  margin-top: 30px;
-
-  h1 {
-    line-height: 1.3;
-
-    .api {
-      color: red;
+    margin: 0;
+    padding: 0;
+    box-sizing: border-box;
+    font-family: Arial, Helvetica, sans-serif;
+    background-color: antiquewhite;
+  }
+  
+  .container {
+    max-width: 1320px;
+    margin: 0 auto;
+    width: 100%;
+    min-height: 80vh;
+  }
+  
+  .api-heading {
+    text-align: center;
+    margin-top: 30px;
+  
+    h1 {
+      line-height: 1.3;
+  
+      .api {
+        color: red;
+      }
+  
+      .cases {
+        color: blue;
+      }
     }
-
-    .cases {
-      color: blue;
+  }
+  
+  .api-box-div {
+    display: flex;
+    justify-content: center;
+  
+    .api-box {
+      border: 3px solid brown;
+      padding: 15px 30px;
+      margin-top: 20px;
+      cursor: default;
     }
   }
-}
-
-.api-box-div {
-  display: flex;
-  justify-content: center;
-
-  .api-box {
-    border: 3px solid brown;
-    padding: 15px 30px;
-    margin-top: 20px;
-    cursor: default;
-  }
-}
-
-.line-div {
-  display: flex;
-  justify-content: center;
-
-  .line {
-    border-left: 2px solid brown;
-    height: 70px;
-  }
-}
-
-.internal {
-  text-align: center;
-
-  h3 {
-    font-weight: bold;
-  }
-
+  
   .line-div {
+    display: flex;
+    justify-content: center;
+  
     .line {
       border-left: 2px solid brown;
-      height: 40px;
+      height: 70px;
     }
   }
-}
-
-.text-center {
-  text-align: center;
-  margin-top: 20px;
-}
-
-.horizontal-line-center {
-  display: flex;
-  justify-content: center;
-
-  .horizontal-line {
+  
+  .internal {
+    text-align: center;
+  
+    h3 {
+      font-weight: bold;
+    }
+  
+    .line-div {
+      .line {
+        border-left: 2px solid brown;
+        height: 40px;
+      }
+    }
+  }
+  
+  .text-center {
+    text-align: center;
+    margin-top: 20px;
+  }
+  
+  .horizontal-line-center {
+    display: flex;
+    justify-content: center;
+  
+    .horizontal-line {
+      width: 600px;
+      height: 0;
+      border-top: 2px solid brown;
+    }
+  }
+  
+  .two-vertical-lines {
+    display: flex;
+    justify-content: space-between;
     width: 600px;
-    height: 0;
-    border-top: 2px solid brown;
+    margin: -42px auto 0;
+  
+    div {
+      border-left: 2px solid brown;
+      height: 60px;
+      width: 2px;
+    }
   }
-}
-
-.two-vertical-lines {
-  display: flex;
-  justify-content: space-between;
-  width: 600px;
-  margin: -42px auto 0;
-
-  div {
-    border-left: 2px solid brown;
-    height: 60px;
-    width: 2px;
+  
+  .side-labels {
+    display: flex;
+    justify-content: space-between;
+    width: 670px;
+    margin: 10px auto 0;
+    text-align: center;
+  
+    h3 {
+      font-weight: bold;
+      width: 100px;
+    }
   }
-}
-
-.side-labels {
-  display: flex;
-  justify-content: space-between;
-  width: 670px;
-  margin: 10px auto 0;
-  text-align: center;
-
-  h3 {
-    font-weight: bold;
-    width: 100px;
+  
+  /* Responsive tweaks for all screen sizes */
+  
+  @media (max-width: 1100px) {
+    .horizontal-line-center .horizontal-line,
+    .two-vertical-lines {
+      width: 90%;
+    }
+  
+    .side-labels {
+      width: 95%;
+  
+      h3 {
+        width: auto;
+        font-size: 1rem;
+      }
+    }
   }
-}
-@media (max-width: 800px) {
+  
+  @media (max-width: 800px) {
     .container {
-      transform: rotate(270deg);
-     
+      position: absolute;
+      top: 50%;
+      left: 50%;
+      transform: translate(-50%, -50%) rotate(270deg);
+      transform-origin: center center;
+      width: 100vh;
+      height: 100vw;
+  
+      display: flex;
+      flex-direction: column;
+      justify-content: center;
+      align-items: center;
+    }
+  
+    .api-heading h1 {
+      font-size: 6vw;
+    }
+  
+    .api-box {
+      font-size: 5vw;
+      padding: 12px 20px;
+    }
+  
+    .horizontal-line-center .horizontal-line,
+    .two-vertical-lines {
+      width: 80vw;
+    }
+  
+    .side-labels {
+      width: 90vw;
+  
+      h3 {
+        font-size: 4vw;
+        width: auto;
+      }
+    }
+  
+    .text-center {
+      font-size: 4vw;
+    }
+  
+    .line-div .line {
+      height: 50px !important;
+    }
+  
+    .two-vertical-lines div {
+      height: 40px !important;
+    }
+  }
+  
+  @media (max-width: 480px) {
+    .api-heading h1 {
+      font-size: 7vw;
+    }
+  
+    .api-box {
+      font-size: 6vw;
+      padding: 10px 15px;
+    }
+  
+    .side-labels h3 {
+      font-size: 5vw;
+    }
+  
+    .horizontal-line-center .horizontal-line,
+    .two-vertical-lines {
+      width: 90vw;
     }
   }
   
